--- a/templates/scoreboard/transactions.html
+++ b/templates/scoreboard/transactions.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-        <div class='container' hx-get="/hud/{{api_key}}" hx-trigger="every 2m" hx-swap="outerHTML">
+        <div class='container' hx-get="/hud/transactions" hx-trigger="every 2m" hx-swap="outerHTML">
 			<a href="/hud/{{api_key}}" class="href"><h1>SOTB Transactions HUD</h1></a> 
 			<a href="/hud/{{api_key}}" class="href"><h2>Back to User HUD</h2></a>                 
 
