--- a/static/style.css
+++ b/static/style.css
@@ -147,8 +147,8 @@ a:active {
 
 
 table.sortable thead {
-    background-color:#eee;
-    color:#666666;
+    background-color:#84f7f1;
+    color:#414141;
     font-weight: bold;
     cursor: default;
 }
