--- a/templates/creator/creator.html
+++ b/templates/creator/creator.html
@@ -66,8 +66,8 @@
                 </p>
                 <!-- dependencies -->
                 <p>
-                    <h5>Challenge Dependencies</h5>
-                    <small id="depends_on_help" class="form-text text-muted">Comma separated list of UUIDs for any challenges which must be solved before this challenge is solvable. Leave blank if there are no dependencies</small>
+                    <h5>Challenge Prerequisites</h5>
+                    <small id="depends_on_help" class="form-text text-muted">Comma separated list of UUIDs for any challenges which must be solved before this challenge is solvable. Leave blank if there are no pre-reqs</small>
                     <input type="text" class="form-control" name="depends_on" id="depends_on" placeholder="Depends on">
                     
                 </p>
