adding challenge download button.

--- a/templates/creator/creator.html
+++ b/templates/creator/creator.html
@@ -91,6 +91,7 @@
                     <button id='add_hint_btn'  py-click="add_hint()" class="py-button">Add a hint</button>
                     <button id='build_btn'  py-click="build_challenge()" class="py-button">Build</button>
                     <button id='validate_btn'  py-click="validate_challenge()" class="py-button">Validate</button>
+                    <button id='download_btn'  py-click="download_challenge()" class="py-button">Download Challenge File</button>
                 </p>
                 
             
