--- a/templates/scoreboard/transactions.html
+++ b/templates/scoreboard/transactions.html
@@ -15,8 +15,8 @@
 </head>
 <body>
         <div class='container' hx-get="/hud/transactions" hx-trigger="every 2m" hx-swap="outerHTML">
-			<a href="/hud/{{api_key}}" class="href"><h1>SOTB Transactions HUD</h1></a> 
-			<a href="/hud/{{api_key}}" class="href"><h2>Back to User HUD</h2></a>                 
+			<a href="/hud" class="href"><h1>SOTB Transactions HUD</h1></a> 
+			<a href="/hud" class="href"><h2>Back to User HUD</h2></a>                 
 
                 <div class="purchased_hints card card-body">
 					<h2>Transactions for team <code>{{teamname}}</code></h2>
