--- a/templates/scoreboard/hud.html
+++ b/templates/scoreboard/hud.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-        <div class='container' hx-get="/hud/" hx-trigger="every 2m" hx-swap="outerHTML">
+        <div class='container' hx-get="/hud" hx-trigger="every 2m" hx-swap="outerHTML">
                 <h1>SOTB PLAYER HUD</h1> <h2><a href="/">Scoreboard</a></h2><h2 id="transactions_link"><a href="/hud/transactions">Team Transactions</a></h2>
                 <div class="team_info card card-body">
 					<h2>
