better scoreboard UI for challenges

--- a/static/style.css
+++ b/static/style.css
@@ -172,3 +172,11 @@ table.sortable th:not(.sorttable_sorted):not(.sorttable_sorted_reverse):not(.sor
     color: black; 
     background-color: black; 
   }
+
+.challenge_grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 0px;
+}
