--- a/templates/scoreboard/hud.html
+++ b/templates/scoreboard/hud.html
@@ -11,17 +11,30 @@
 		<script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 
 		<script src="/static/script.js"></script>
-
 </head>
 <body>
         <div class='container' hx-get="/hud" hx-trigger="every 2m" hx-swap="outerHTML">
-                <h1>SOTB PLAYER HUD</h1> <h2><a href="/">Scoreboard</a></h2><h2 id="transactions_link"><a href="/hud/transactions">Team Transactions</a></h2>
-				<h2><a href="/challenges">All Challenges</a></h2>
-                {% if is_admin %}
-				<a href="/admin/net/transactions"> Admin Graph - Transactions</a>
-				<a href="/admin/net/players"> Admin Graph - Players and Teams</a>
-				<a href="/admin/net/challenges"> Admin Graph - Challenges</a>
-				{% endif %}
+                <h1>SOTB PLAYER HUD</h1> 
+				
+				<div class="header_links">
+					<div class="private_stuff">
+						<h2><a href="/">Scoreboard</a></h2>
+						<h2><a href="/hud/transactions">Team Transactions</a></h2>
+
+						{% if is_admin %}
+						<h3>
+							<a href="/admin/net/transactions"> Admin Graph - Transactions</a><br>
+							<a href="/admin/net/players"> Admin Graph - Players and Teams</a><br>
+							<a href="/admin/net/challenges"> Admin Graph - Challenges</a><br>
+						</h3>
+						{% endif %}
+					</div>
+
+					<div class="public_stuff">
+						<h2><a href="/challenges">All Challenges</a></h2>
+						<h2><a href="/transactions">Public Transactions</a></h2>
+					</div>
+				</div>
 				<div class="team_info card card-body">
 					<h2>
 						Team <code>{{teamname}}</code> 
