--- a/templates/scoreboard/scores.html
+++ b/templates/scoreboard/scores.html
@@ -2,7 +2,7 @@
 	<h2>{{msg}}</h2>
 </div >
 <div class='teams_and_players'>
-	<div class="top_teams card card-body">
+	<div class="top_teams card">
 		<h2>Top Teams</h2>
 		<table class="table">
 			<thead>
@@ -20,7 +20,7 @@
 		</table>
 	</div>
 
-	<div class="mvps card card-body">
+	<div class="mvps card">
 		<h2>Top Scoring Players</h2>
 		<table class="table">
 			<thead>
