--- a/templates/scoreboard/hud.html
+++ b/templates/scoreboard/hud.html
@@ -16,9 +16,7 @@
 </head>
 <body>
         <div class='container' hx-get="/hud" hx-trigger="every 2m" hx-swap="outerHTML">
-				<div class="glitch-wrapper">
-					<div class="glitch header" data-glitch="SOTB PLAYER HUD">SOTB PLAYER HUD</div>
-				 </div>
+				<h1>SOTB PLAYER HUD</h1>
 				 
 				<div class="header_links">
 					<div class="private_stuff">
