--- a/templates/scoreboard/public_transactions.html
+++ b/templates/scoreboard/public_transactions.html
@@ -14,7 +14,7 @@
 		
 </head>
 <body>
-        <div class='container' hx-get="/transactions" hx-trigger="every 10s" hx-swap="outerHTML">
+        <div class='container' hx-get="/transactions" hx-trigger="every 1m" hx-swap="outerHTML">
 			<h1>SOTB PLAYER HUD</h1> 
 				
 				<div class="header_links">
