--- a/static/style.css
+++ b/static/style.css
@@ -32,7 +32,7 @@ body {
     background-color: #8e44ad;
     color: #414141;
     font-family: 'Roboto', sans-serif;
-    
+    height: 100%; 
 }
 body::after {
     content: "";
