--- a/templates/creator/creator.html
+++ b/templates/creator/creator.html
@@ -51,7 +51,8 @@
                     <input type="text" class="form-control" name="challenge_title" id="challenge_title" placeholder="Challenge Title">
                 </p>
                 <h5>Challenge Description</h5>
-                <small id="desc_help" class="form-text text-muted">The should provided everything a player needs; links to files or sites and enough description to get started. Remember, you can't edit your challenge once you post it.</small> You can use {%raw%}'{{PLAYERNAME}}' '{{TEAMNAME}}' AND '{{TEAMUUID}}'{%endraw%} in your description and it will be shown to players with the appropriate values for them and their team.
+                <small id="desc_help" class="form-text text-muted">The should provided everything a player needs; links to files or sites and enough description to get started. Remember, you can't edit your challenge once you post it. You can use {%raw%}'{{PLAYERNAME}}' '{{TEAMNAME}}' AND '{{TEAMUUID}}'{%endraw%} in your description and it will be shown to players with the appropriate values for them and their team.
+                </small>
                 <p>
                     
                     <textarea class='form-control' name="challenge_description" id="challenge_description"  rows="5" width="100%" placeholder="Challenge description here..."></textarea>
