--- a/templates/validator/index.html
+++ b/templates/validator/index.html
@@ -55,7 +55,7 @@
 		</marquee>
 		<h3>checkout the new <a href="/create">byoctf challenge creator</a></h3>
 		<form>
-			<textarea name="challenge" id="challenge" cols="60" rows="20"
+			<textarea name="toml" id="toml" cols="60" rows="20"
 				placeholder="Paste your challenge toml here..."></textarea>
 			<br>
 			<button hx-post="/validate" hx-target="#preview">
