--- a/templates/scoreboard/transactions.html
+++ b/templates/scoreboard/transactions.html
@@ -15,7 +15,7 @@
 </head>
 <body>
         <div class='container' hx-get="/hud/transactions" hx-trigger="every 2m" hx-swap="outerHTML">
-			<h1>SOTB PLAYER HUD</h1> 
+			<a href="/hud"><h1>SOTB PLAYER HUD</h1></a>
 				
 				<div class="header_links">
 					<div class="private_stuff">
